# bupt_tasks

./: README.md
exercise/: hw_010.md  hw_011.md  hw_012.md  task1.md  task2.md  task3.1.a.md  task3.1.b.md  task3.2.md  task3.3.md  taskList.md
task1/: CMakeLists.txt  main.cpp
task1/include/: Calculator.h
task1/src/: Calculator.cpp
task2/client/: Client.cpp  CmakeLists.txt
task2/server/: CMakeLists.txt  Server.cpp
task3.1.a/: CMakeLists.txt  main.cpp
task3.1.a/ffmpeg/lib/: avcodec.lib  avformat.lib
task3.1.b/: CMakeLists.txt  main.cpp
task3.1.b/ffmpeg/include/libavutil/: ffversion.h
task3.1.b/ffmpeg/lib/: avutil.lib  swscale.lib
task3.2/: CMakeLists.txt  main.cpp
task3.3/: CMakeLists.txt  main.cpp
task3.3-new/: CMakeLists.txt  main.cpp
task3.3-new/ffmpeg/lib/: avdevice.lib
task3.3-new/include/: AudioPlayer.h  VideoPlayer.h
task3.3-new/src/: AudioPlayer.cpp  VideoPlayer.cpp
task3.3/ffmpeg/lib/: avfilter.lib  swresample.lib
task3.3/include/: VideoThread.h
task3.3/src/: VideoThread.cpp
