cmake_minimum_required(VERSION 3.0.0)
project(task3.1.b)
aux_source_directory(src SRC_SUB)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/ffmpeg/include)
include_directories(${PROJECT_SOURCE_DIR}/sdl/include)
include_directories(${PROJECT_SOURCE_DIR}/openal/include)
file(GLOB LIB ${PROJECT_SOURCE_DIR}/ffmpeg/lib/*.lib)
file(GLOB ALLIB ${PROJECT_SOURCE_DIR}/openal/lib/*.lib)
link_directories(${PROJECT_SOURCE_DIR}/openal/lib)
link_directories(${PROJECT_SOURCE_DIR}/ffmpeg/lib)
link_directories(${PROJECT_SOURCE_DIR}/sdl/lib)
add_executable(main main.cpp ${SRC_SUB})
target_link_libraries(main ${LIB} ${ALLIB} SDL2 SDL2main SDL2_test)
